bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:4: error: not found: value Maths
  else{return Maths.abs(n-21)}
              ^